samples/_failures_safe/1761166379_1908b1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5b6adf56.c: In function ‘main’:
./samples/SAFE/__tmp_5b6adf56.c:142:5: error: expected expression at end of input
  142 |     addEdge(graph, 1,
      |     ^~~~~~~
./samples/SAFE/__tmp_5b6adf56.c:142:5: error: too few arguments to function ‘addEdge’
./samples/SAFE/__tmp_5b6adf56.c:38:6: note: declared here
   38 | void addEdge(struct Graph* graph, int src, int dest, int weight) {
      |      ^~~~~~~
./samples/SAFE/__tmp_5b6adf56.c:142:5: error: expected declaration or statement at end of input
  142 |     addEdge(graph, 1,
      |     ^~~~~~~
